<resources>
    <string name="app_name">posko</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="display_app_name">posko</string>

    <string name="login_account_name">Account Name</string>
    <string name="login_password">Password</string>
    <string name="login_email_address">Email Address</string>
    <string name="action_login">LOGIN</string>
    <string name="sample_app_version">v0.0.0.0</string>
    <string name="login_sign_in">Sign In</string>
    <string name="sample_name">Edwin Martinez Jr</string>
    <string name="sample_email">dev.edwinmartinez@gmai.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="menu_favorites">Favorites</string>
    <string name="hint_search_item">Search Item</string>
    <string name="posko">posko</string>
    <string name="menu_ticket">Ticket</string>
    <string name="menu_filter">Filter</string>
    <string name="login_sample_account_name">first_company</string>
    <string name="sample_login_email">admin@first_company.com</string>
    <string name="sample_login_pass">pass</string>
    <string name="menu_products">Products</string>
    <string name="menu_search">Search</string>
    <string name="login_server">Domain</string>
</resources>
