<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/first_group">
        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>

        <item
            android:icon="@drawable/ic_confirmation_number_black_24dp"
            android:title="@string/menu_history"/>

        <item
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/menu_products"/>

        <item
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favorites"/>

    </group>

    <group
        android:id="@+id/second_group">

        <item
            android:checked="false"
            android:checkable="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings"/>

        <item
            android:checked="false"
            android:checkable="false"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="@string/menu_logout"/>

    </group>



</menu>
