<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.activities.login.LoginFragment">

    <LinearLayout
        android:layout_above="@id/tv_app_version"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_cloud_queue_green_24dp" />

        <LinearLayout
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_account_name"
                    android:inputType="textNoSuggestions|text"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/EditTextTheme">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_address"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/EditTextTheme"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_round_button"
                android:elevation="20dp"
                android:paddingLeft="60dp"
                android:paddingTop="14dp"
                android:paddingRight="60dp"
                android:paddingBottom="14dp"
                android:text="@string/action_login"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_app_version"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/faded_gray"
        android:textSize="16sp"
        android:text="@string/sample_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>